# ohmspice

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli.md  index.md  templates.md
examples/: basic_rc_filter.py  cli_demo.sh  template_usage.py
src/ohmspice/: __init__.py  circuit.py  cli.py  netlist.py
src/ohmspice/analysis/: __init__.py  results.py
src/ohmspice/components/: __init__.py  base.py  passive.py  sources.py  utils.py
src/ohmspice/simulators/: __init__.py  base.py  ltspice.py
src/ohmspice/templates/: __init__.py  amplifiers.py  base.py  filters.py  oscillators.py  power.py
tests/: __init__.py  conftest.py  test_circuit.py  test_cli.py  test_components.py  test_ltspice.py  test_netlist.py  test_package.py  test_templates.py
