[project]
name = "ohmspice"
version = "0.1.0"
description = "Open-source SPICE toolkit with AI integration for electronic circuit design"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eray Erdogan"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
keywords = ["spice", "circuit", "simulation", "electronics", "ltspice", "ngspice"]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
viz = [
    "schemdraw>=0.18",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "ohmspice[dev,docs,viz,mcp]",
]

[project.scripts]
ohmspice = "ohmspice.cli:main"

[project.urls]
Homepage = "https://github.com/erdoganeray/ohmspice"
Documentation = "https://erdoganeray.github.io/ohmspice"
Repository = "https://github.com/erdoganeray/ohmspice"
Issues = "https://github.com/erdoganeray/ohmspice/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ohmspice"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ohmspice --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/ohmspice"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
